tests/errors/semantic/non_blocking/CONST_ASSIGNED_ARGUMENT.py
# pylint: disable=missing-function-docstring, missing-module-docstring

def funct_c(x : 'const int', a  : int):
    x += a
    return x
